--- a/package.xml
+++ b/package.xml
@@ -2,12 +2,12 @@
 <package format="2">
   <name>ex1</name>
   <version>0.0.0</version>
-  <description>The ex1 package</description>
+  <description>ROS Workshop package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="carolina@todo.todo">carolina</maintainer>
+  <maintainer email="carolina.marques1908@gmail.com">carolina</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -55,11 +55,16 @@
   <build_export_depend>std_msgs</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <!-- For the service-->
+  <build_depend>message_generation</build_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
+    <!-- For the service-->
+    <cpp cflags="-I${prefix}/srv/cpp"/>
 
   </export>
 </package>
